# fastapi-returns

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
fastapi_returns/: __init__.py  _routers.py
fastapi_returns/tests/: test_routers.py
lib/: router.py
lib/tests/: test_routers.py
tests/: test_routers.py
