[tool.poetry]
name = "fastapi-returns"
version = "0.1.0"
description = ""
authors = ["Jakub Borusewicz <jakub.borusewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
returns = "^0.16.0"
lambdas = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
